# betsson_assessment

./: .env.example  .gitignore  Dockerfile  README.md  demo.ipynb  demo_script.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: drafter.py  orchestrator.py  reader.py  scheduler.py  summarizer.py
app/api/: approvals.py  inbox.py  memory_routes.py  ui.html  ui.py
app/llm/: provider.py
app/memory/: loader.py  long_term.py  short_term.py
app/observability/: logging.py  metrics.py  tracing.py
app/schemas/: actions.py  agent.py  email.py  memory.py
app/tools/: calendar_api.py  classifier.py  knowledge_store.py  mail_api.py
data/: sample_contacts.json  sample_emails.json
data/sample_logs/: metrics_snapshot.json  trace_example.json
docs/: architecture.md
tests/: conftest.py  test_agents.py  test_api.py  test_integration.py  test_llm_provider.py  test_memory_and_observability.py  test_orchestrator.py  test_tools.py
